force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/QCC_Report_Extract_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This is used to specify settings for extracting data from salesforce for reporting purposes</description>
    <label>QCC Report Extract Setting</label>
    <pluralLabel>QCC Report Extract Settings</pluralLabel>
</CustomObject>