force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/fields/QCC_Filename__c.field-meta.xml
<CustomField>
    <fullName>QCC_Filename__c</fullName>
    <description>Filename of the report extract</description>
    <inlineHelpText>Filename of the report extract</inlineHelpText>
    <label>Filename</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>