force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/fields/QCC_Query_Column__c.field-meta.xml
<CustomField>
    <fullName>QCC_Query_Column__c</fullName>
    <description>Fields to be used by the SOQL statement when extracting data</description>
    <inlineHelpText>Fields to be used by the SOQL statement when extracting data</inlineHelpText>
    <label>Query Column</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>