force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/fields/QCC_Query_Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>QCC_Query_Filter_Condition__c</fullName>
    <description>The condition to be used as filter when the SOQL runs</description>
    <inlineHelpText>The condition to be used as filter when the SOQL runs</inlineHelpText>
    <label>Query Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>