force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/fields/QCC_Report_Header__c.field-meta.xml
<CustomField>
    <fullName>QCC_Report_Header__c</fullName>
    <description>The column headers, in order of sequence of how the fields will appear in the extract file</description>
    <inlineHelpText>The column headers, in order of sequence of how the fields will appear in the extract file</inlineHelpText>
    <label>Report Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>