force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/fields/QCC_Sharepoint_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>QCC_Sharepoint_Folder_Name__c</fullName>
    <description>The destination sharepoint folder on which the extracted data file will be saved</description>
    <inlineHelpText>The destination sharepoint folder on which the extracted data file will be saved</inlineHelpText>
    <label>Sharepoint Folder Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>