force-app/main/default/objects/QCC_Report_Extract_Setting__mdt/listViews/QCC_Report_Extract_Settings.listView-meta.xml
<ListView>
    <fullName>QCC_Report_Extract_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>QCC_Target_Object__c</columns>
    <columns>QCC_Query_Column__c</columns>
    <columns>QCC_Query_Filter_Condition__c</columns>
    <columns>QCC_Report_Header__c</columns>
    <columns>QCC_Filename__c</columns>
    <columns>QCC_Sharepoint_Folder_Location__c</columns>
    <columns>QCC_Sharepoint_Folder_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All QCC Report Extract Settings</label>
</ListView>